--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,14 @@ PROJECT(CGDraw)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-add_executable(${PROJECT_NAME} CGDraw.cpp)
+add_executable(${PROJECT_NAME} CGDraw.cpp "Model.h" "Model.cpp"  "World.h" "World.cpp" "Models.h" "Models.cpp" "Group.h" "Group.cpp" "Camera.h" "Camera.cpp" "Lights.h" "Lights.cpp" "Groups.h" "Groups.cpp")
+
+target_link_libraries(CGDraw "cartesian")
+
+target_link_libraries(CGDraw "generator")
 add_executable(generator generator/writer.cpp "generator/shapes.cpp")
+
+target_link_libraries(generator "cartesian")
 
 find_package(OpenGL REQUIRED)
 find_package(tinyxml2 REQUIRED)
@@ -62,3 +68,5 @@ endif(WIN32)
 
 
 
+
+add_subdirectory("cartesian")
