:: transformation by XML order :: scale camera with + / - min 0.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,11 @@ link_libraries(${GLEW_LIBRARIES})
 
 target_include_directories(CGDraw PUBLIC cartesian)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARY})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${OPENGL_LIBRARIES} ${GLEW_LIBRARY} ${GLUT_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PUBLIC GLUT::GLUT)
+target_link_libraries(${PROJECT_NAME} PUBLIC GLEW::GLEW)
 target_link_libraries(${PROJECT_NAME} PUBLIC tinyxml2::tinyxml2)
 target_link_libraries(${PROJECT_NAME} PUBLIC cartesian)
-target_link_libraries(${PROJECT_NAME} PUBLIC m)
 
 if(WIN32)
 	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
@@ -52,5 +53,5 @@ endif(WIN32)
 add_executable(generator generator/writer.cpp generator/shapes.cpp)
 target_link_libraries(generator cartesian)
 target_link_libraries(generator tinyxml2::tinyxml2)
-target_link_libraries(generator m)
+#target_link_libraries(generator m)
 target_include_directories(generator PUBLIC cartesian)
