using Matrix class : defined mul; get_point; set_point,... tested

--- a/cartesian/CMakeLists.txt
+++ b/cartesian/CMakeLists.txt
@@ -1,1 +1,1 @@
-﻿add_library(cartesian STATIC "cartesian.h" "cartesian.cpp" "Curve.h" "Curve.cpp")
+﻿add_library(cartesian STATIC "cartesian.h" "cartesian.cpp" "Curve.h" "Curve.cpp" "BezierTriangles.h" "BezierTriangles.cpp" "Matrix.h" "Matrix.cpp")
