--- a/cartesian/CMakeLists.txt
+++ b/cartesian/CMakeLists.txt
@@ -1,1 +1,1 @@
-﻿add_library(cartesian STATIC "cartesian.h" "cartesian.cpp" "Curve.h" "Curve.cpp" "BezierTriangles.h" "BezierTriangles.cpp" "Matrix.h" "Matrix.cpp" "PointMatrix.h" "PointMatrix.cpp" "Point.h" "Point.cpp")
+﻿add_library(cartesian STATIC "cartesian.h" "cartesian.cpp" "Curve.h" "Curve.cpp" "BezierTriangles.h" "BezierTriangles.cpp" "Matrix.h" "Matrix.cpp" "PointMatrix.h" "PointMatrix.cpp" "Point.h" "Point.cpp" "RotMatrix.h" "RotMatrix.cpp")
